[gd_scene load_steps=7 format=3 uid="uid://bf5uur652nwyl"]

[ext_resource type="Script" path="res://clases/hurtbox.gd" id="1_eoi7y"]
[ext_resource type="Script" path="res://objetos/enemigos/basico/enemy_wiggly.gd" id="1_t84pp"]

[sub_resource type="Curve" id="Curve_8s7mx"]
min_value = -1.0
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kt7i0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_802gw"]
size = Vector2(36, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32fiv"]
size = Vector2(36, 12)

[node name="EnemyWiggly" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_t84pp")
max_health = 5.0
speed = 7500.0
movement_curve = SubResource("Curve_8s7mx")
factor = 7500
process_x = true

[node name="Polygon2D" type="Polygon2D" parent="."]
material = SubResource("CanvasItemMaterial_kt7i0")
position = Vector2(-0.0078125, 0)
rotation = -1.57079
scale = Vector2(0.5, 0.5)
color = Color(0.969512, 0.000859423, 0.982159, 1)
offset = Vector2(-1.99971, 6.01579)
polygon = PackedVector2Array(-34, 0.000213329, -34.0001, -13.9998, -30.0001, -13.9998, -18.0004, -16, -18.0003, -8.00004, 21.9997, -8.00029, 21.9996, -16.0003, -18.0004, -16, -30.0003, -14, -30.0001, -17.9998, -18.0004, -22, 21.9996, -22.0003, 33.9996, -18.0004, 33.9997, -14.0004, 37.9997, -14.0004, 37.9997, -0.00039053, 33.9998, 1.99963, 25.9998, 1.99968, 23.9998, 7.9997, 21.9998, 1.99971, 19.9998, 5.99972, 17.9998, 1.99973, -14.0002, 1.99994, -16.0002, 5.99995, -18.0002, 1.99996, -20.0002, 7.99997, -22.0002, 1.99999, -30.0002, 2.00004)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
rotation = -1.57079
shape = SubResource("RectangleShape2D_802gw")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("owner_node")]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_eoi7y")
owner_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-2, 0)
rotation = -1.57079
shape = SubResource("RectangleShape2D_32fiv")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
